@@ -1,15 +1,19 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM golang:latest as builder
 
-FROM openjdk:8-jre-slim
+WORKDIR /app
 
-EXPOSE 8080
+COPY go.mod go.sum ./
+RUN go mod download
 
-RUN mkdir /app
+COPY . .
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+RUN go build -o main .
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+FROM alpine:latest
 
+WORKDIR /root/
+
+COPY --from=builder /app/main
+ .
+
+CMD ["./main"]
